[gd_scene load_steps=13 format=3 uid="uid://c7q775vp1i4cy"]

[ext_resource type="FontFile" uid="uid://h8berclpli6i" path="res://Assets/Fonts/SyneMono-Regular.ttf" id="1_7o4d0"]
[ext_resource type="Script" uid="uid://gp1hblldkyud" path="res://Assets/Nodes/Hud/pause_menu.gd" id="1_qxtyl"]
[ext_resource type="Shader" uid="uid://bm1ye4ejmnfim" path="res://Assets/Nodes/Hud/pause_menu.gdshader" id="1_tv8f1"]
[ext_resource type="Script" uid="uid://dy3hlnqaskxfy" path="res://Assets/Nodes/Hud/options_menu.gd" id="4_vfjye"]
[ext_resource type="Script" uid="uid://h2m2rof2cyaq" path="res://Assets/Nodes/Systems/button_sound_manager.gd" id="5_fh48e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qxtyl"]
shader = ExtResource("1_tv8f1")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_qxtyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RestartingLabel:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RestartingLabel:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RestartingLabel:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("RestartingLabel:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_tv8f1"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.26666668),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.6530001260175]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PauseMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vfjye"]
resource_name = "restarting"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestartingLabel:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.050000004, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RestartingLabel:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.050000004, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RestartingLabel:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.050000004, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RestartingLabel:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.050000004, -0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxtyl"]
_data = {
&"RESET": SubResource("Animation_qxtyl"),
&"blur": SubResource("Animation_tv8f1"),
&"restarting": SubResource("Animation_vfjye")
}

[sub_resource type="Theme" id="Theme_7o4d0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7o4d0"]
bg_color = Color(0.15, 0.15, 0.15, 0.69411767)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qxtyl")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_qxtyl")
layout_mode = 0
offset_left = -8.0
offset_top = -13.0
offset_right = 1161.0
offset_bottom = 662.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qxtyl")
}

[node name="PauseMenu" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PauseWindow" type="PanelContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 454.0
offset_top = 199.0
offset_right = 686.0
offset_bottom = 427.0
theme = SubResource("Theme_7o4d0")
theme_override_styles/panel = SubResource("StyleBoxFlat_7o4d0")

[node name="PauseText" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 363.0
offset_top = 207.0
offset_right = 779.0
offset_bottom = 246.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 493.0
offset_top = 250.0
offset_right = 647.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(1, 0.751, 0.17000002, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 493.0
offset_top = 291.0
offset_right = 647.0
offset_bottom = 323.0
theme_override_colors/font_color = Color(1, 0.751, 0.17000002, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
text = "Restart"

[node name="OptionsButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 493.0
offset_top = 331.0
offset_right = 647.0
offset_bottom = 363.0
theme_override_colors/font_color = Color(1, 0.751, 0.17000002, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
text = "Options
"

[node name="ExitButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 493.0
offset_top = 371.0
offset_right = 647.0
offset_bottom = 403.0
theme_override_colors/font_color = Color(1, 0.751, 0.17000002, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
text = "Exit
"

[node name="MoveText" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 20.0
offset_top = 562.0
offset_right = 436.0
offset_bottom = 595.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 24
text = "Move: Arrow Keys, Left Stick"

[node name="CameraText" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 621.0
offset_top = 590.0
offset_right = 1134.0
offset_bottom = 623.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 24
text = "Camera: A or D keys, Mouse, Right Stick"
horizontal_alignment = 2

[node name="JumpText" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 20.0
offset_top = 595.0
offset_right = 436.0
offset_bottom = 628.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 24
text = "Jump: Spacebar, Left Mouse, X"

[node name="RestartingLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 443.0
offset_top = 21.0
offset_right = 672.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 0.92333335, 0.53999996, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7019608)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 32
text = "Restarting..."

[node name="OptionsMenu" type="Control" parent="." node_paths=PackedStringArray("parent_menu")]
anchors_preset = 0
offset_top = -1.0
offset_right = 40.0
offset_bottom = 39.0
script = ExtResource("4_vfjye")
parent_menu = NodePath("../PauseMenu")

[node name="OptionsWindow" type="PanelContainer" parent="OptionsMenu"]
layout_mode = 0
offset_left = 421.0
offset_top = 199.0
offset_right = 653.0
offset_bottom = 427.0
scale = Vector2(1.3118641, 1.3600012)
theme = SubResource("Theme_7o4d0")
theme_override_styles/panel = SubResource("StyleBoxFlat_7o4d0")

[node name="OptionsText" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 363.0
offset_top = 219.0
offset_right = 779.0
offset_bottom = 258.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="OptionsMenu"]
layout_mode = 0
offset_left = 573.0
offset_top = 274.0
offset_right = 707.0
offset_bottom = 290.0
max_value = 10.0

[node name="VolumeText" type="Label" parent="OptionsMenu/VolumeSlider"]
layout_mode = 0
offset_left = -76.0
offset_top = -3.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 16
text = "Volume:
"
horizontal_alignment = 1

[node name="SensibilitySlider" type="HSlider" parent="OptionsMenu"]
layout_mode = 0
offset_left = 573.0
offset_top = 303.0
offset_right = 707.0
offset_bottom = 319.0
min_value = 2.0
max_value = 12.0
value = 2.0

[node name="SensibilityText" type="Label" parent="OptionsMenu/SensibilitySlider"]
layout_mode = 0
offset_left = -113.0
offset_top = -4.0
offset_right = -7.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 16
text = "Sensibility:"
horizontal_alignment = 1

[node name="InvertXText" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 443.0
offset_top = 328.0
offset_right = 567.0
offset_bottom = 371.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 16
text = "Invert X Axis:"
horizontal_alignment = 1

[node name="InvertXToggle" type="CheckButton" parent="OptionsMenu/InvertXText"]
layout_mode = 0
offset_left = 122.0
offset_top = -2.0
offset_right = 166.0
offset_bottom = 22.0

[node name="InvertYText" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 443.0
offset_top = 357.0
offset_right = 567.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 16
text = "Invert Y Axis:"
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="OptionsMenu/InvertYText"]
layout_mode = 0
offset_left = 122.0
offset_right = 166.0
offset_bottom = 24.0

[node name="InvertKeys" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 452.0
offset_top = 385.0
offset_right = 576.0
offset_bottom = 428.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 16
text = "Invert Keys:"
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="OptionsMenu/InvertKeys"]
layout_mode = 0
offset_left = 113.0
offset_right = 157.0
offset_bottom = 24.0

[node name="FullscreenText" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 452.0
offset_top = 412.0
offset_right = 576.0
offset_bottom = 455.0
theme_override_colors/font_color = Color(1, 0.8786667, 0.48000002, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
theme_override_font_sizes/font_size = 16
text = " Fullscreen:"
horizontal_alignment = 1

[node name="CheckButton" type="CheckButton" parent="OptionsMenu/FullscreenText"]
layout_mode = 0
offset_left = 113.0
offset_right = 157.0
offset_bottom = 24.0

[node name="GoBackButton" type="Button" parent="OptionsMenu"]
layout_mode = 0
offset_left = 523.0
offset_top = 448.0
offset_right = 612.0
offset_bottom = 479.0
theme_override_colors/font_color = Color(0.92, 0.86740667, 0.4692, 1)
theme_override_fonts/font = ExtResource("1_7o4d0")
text = "Return"

[node name="ButtonSoundManager" type="Node" parent="." node_paths=PackedStringArray("parent_scene")]
script = ExtResource("5_fh48e")
parent_scene = NodePath("..")
metadata/_custom_type_script = "uid://h2m2rof2cyaq"

[connection signal="visibility_changed" from="PauseMenu" to="." method="_on_pause_menu_visibility_changed"]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="visibility_changed" from="OptionsMenu" to="OptionsMenu" method="_on_visibility_changed"]
[connection signal="changed" from="OptionsMenu/VolumeSlider" to="OptionsMenu" method="_on_volume_slider_changed"]
[connection signal="value_changed" from="OptionsMenu/VolumeSlider" to="OptionsMenu" method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="OptionsMenu/SensibilitySlider" to="OptionsMenu" method="_on_sensibility_slider_value_changed"]
[connection signal="toggled" from="OptionsMenu/InvertXText/InvertXToggle" to="OptionsMenu" method="_on_invert_x_toggle_toggled"]
[connection signal="toggled" from="OptionsMenu/InvertYText/CheckButton" to="OptionsMenu" method="_on_check_button_toggled"]
[connection signal="toggled" from="OptionsMenu/InvertKeys/CheckButton" to="OptionsMenu" method="_on_invert_keys_check_button_toggled"]
[connection signal="toggled" from="OptionsMenu/FullscreenText/CheckButton" to="OptionsMenu" method="_on_fullscreen_button_toggled"]
[connection signal="pressed" from="OptionsMenu/GoBackButton" to="OptionsMenu" method="_on_go_back_button_pressed"]
